lib/open_ehr/parser/cadl.rb
# Autogenerated from a Treetop grammar. Edits may be lost.


module CADL
  include Treetop::Runtime

  def root
    @root ||= :V_CADL_TEXT
  end

  def _nt_V_CADL_TEXT
    start_index = index
    if node_cache[:V_CADL_TEXT].has_key?(index)
      cached = node_cache[:V_CADL_TEXT][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    r1 = _nt_c_complex_object
    if r1
      r0 = r1
    else
      r2 = _nt_assertions
      if r2
        r0 = r2
      else
        @index = i0
        r0 = nil
      end
    end

    node_cache[:V_CADL_TEXT][start_index] = r0

    r0
  end

  module CComplexObject0
    def SYM_MATCHES
      elements[0]
    end

    def SYM_START_CBLOCK
      elements[1]
    end

    def c_complex_object_body
      elements[2]
    end

    def SYM_END_CBLOCK
      elements[3]
    end
  end

  module CComplexObject1
    def c_complex_object_head
      elements[0]
    end

  end

  def _nt_c_complex_object
    start_index = index
    if node_cache[:c_complex_object].has_key?(index)
      cached = node_cache[:c_complex_object][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    r1 = _nt_c_complex_object_head
    s0 << r1
    if r1
      i3, s3 = index, []
      r4 = _nt_SYM_MATCHES
      s3 << r4
      if r4
        r5 = _nt_SYM_START_CBLOCK
        s3 << r5
        if r5
          r6 = _nt_c_complex_object_body
          s3 << r6
          if r6
            r7 = _nt_SYM_END_CBLOCK
            s3 << r7
          end
        end
      end
      if s3.last
        r3 = instantiate_node(SyntaxNode,input, i3...index, s3)
        r3.extend(CComplexObject0)
      else
        @index = i3
        r3 = nil
      end
      if r3
        r2 = r3
      else
        r2 = instantiate_node(SyntaxNode,input, index...index)
      end
      s0 << r2
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(CComplexObject1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:c_complex_object][start_index] = r0

    r0
  end

  module CComplexObjectHead0
    def c_complex_object_id
      elements[0]
    end

  end

  def _nt_c_complex_object_head
    start_index = index
    if node_cache[:c_complex_object_head].has_key?(index)
      cached = node_cache[:c_complex_object_head][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    r1 = _nt_c_complex_object_id
    s0 << r1
    if r1
      r3 = _nt_c_occurrences
      if r3
        r2 = r3
      else
        r2 = instantiate_node(SyntaxNode,input, index...index)
      end
      s0 << r2
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(CComplexObjectHead0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:c_complex_object_head][start_index] = r0

    r0
  end

  module CComplexObjectId0
    def type_identifier
      elements[0]
    end

    def space
      elements[2]
    end
  end

  def _nt_c_complex_object_id
    start_index = index
    if node_cache[:c_complex_object_id].has_key?(index)
      cached = node_cache[:c_complex_object_id][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    r1 = _nt_type_identifier
    s0 << r1
    if r1
      r3 = _nt_V_LOCAL_TERM_CODE_REF
      if r3
        r2 = r3
      else
        r2 = instantiate_node(SyntaxNode,input, index...index)
      end
      s0 << r2
      if r2
        r4 = _nt_space
        s0 << r4
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(CComplexObjectId0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:c_complex_object_id][start_index] = r0

    r0
  end

  def _nt_c_complex_object_body
    start_index = index
    if node_cache[:c_complex_object_body].has_key?(index)
      cached = node_cache[:c_complex_object_body][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    r1 = _nt_c_any
    if r1
      r0 = r1
    else
      r2 = _nt_c_attributes
      if r2
        r0 = r2
      else
        @index = i0
        r0 = nil
      end
    end

    node_cache[:c_complex_object_body][start_index] = r0

    r0
  end

  def _nt_c_object
    start_index = index
    if node_cache[:c_object].has_key?(index)
      cached = node_cache[:c_object][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    r1 = _nt_c_complex_object
    if r1
      r0 = r1
    else
      r2 = _nt_archetype_slot
      if r2
        r0 = r2
      else
        r3 = _nt_archetype_internal_ref
        if r3
          r0 = r3
        else
          r4 = _nt_constraint_ref
          if r4
            r0 = r4
          else
            r5 = _nt_c_primitive_object
            if r5
              r0 = r5
            else
              r6 = _nt_V_C_DOMAIN_TYPE
              if r6
                r0 = r6
              else
                @index = i0
                r0 = nil
              end
            end
          end
        end
      end
    end

    node_cache[:c_object][start_index] = r0

    r0
  end

  module ArchetypeInternalRef0
    def SYM_USE_NODE
      elements[0]
    end

    def type_identifier
      elements[1]
    end

    def object_path
      elements[3]
    end
  end

  def _nt_archetype_internal_ref
    start_index = index
    if node_cache[:archetype_internal_ref].has_key?(index)
      cached = node_cache[:archetype_internal_ref][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    r1 = _nt_SYM_USE_NODE
    s0 << r1
    if r1
      r2 = _nt_type_identifier
      s0 << r2
      if r2
        r4 = _nt_c_occurrences
        if r4
          r3 = r4
        else
          r3 = instantiate_node(SyntaxNode,input, index...index)
        end
        s0 << r3
        if r3
          r5 = _nt_object_path
          s0 << r5
        end
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(ArchetypeInternalRef0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:archetype_internal_ref][start_index] = r0

    r0
  end

  module ArchetypeSlot0
    def c_archetype_slot_head
      elements[0]
    end

    def SYM_MATCHES
      elements[1]
    end

    def SYM_START_CBLOCK
      elements[2]
    end

    def SYM_END_CBLOCK
      elements[5]
    end
  end

  def _nt_archetype_slot
    start_index = index
    if node_cache[:archetype_slot].has_key?(index)
      cached = node_cache[:archetype_slot][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    r1 = _nt_c_archetype_slot_head
    s0 << r1
    if r1
      r2 = _nt_SYM_MATCHES
      s0 << r2
      if r2
        r3 = _nt_SYM_START_CBLOCK
        s0 << r3
        if r3
          r5 = _nt_c_includes
          if r5
            r4 = r5
          else
            r4 = instantiate_node(SyntaxNode,input, index...index)
          end
          s0 << r4
          if r4
            r7 = _nt_c_excludes
            if r7
              r6 = r7
            else
              r6 = instantiate_node(SyntaxNode,input, index...index)
            end
            s0 << r6
            if r6
              r8 = _nt_SYM_END_CBLOCK
              s0 << r8
            end
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(ArchetypeSlot0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:archetype_slot][start_index] = r0

    r0
  end

  module CArchetypeSlotHead0
    def c_archetype_slot_id
      elements[0]
    end

    def white_space
      elements[1]
    end

  end

  def _nt_c_archetype_slot_head
    start_index = index
    if node_cache[:c_archetype_slot_head].has_key?(index)
      cached = node_cache[:c_archetype_slot_head][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    r1 = _nt_c_archetype_slot_id
    s0 << r1
    if r1
      r2 = _nt_white_space
      s0 << r2
      if r2
        r4 = _nt_c_occurrences
        if r4
          r3 = r4
        else
          r3 = instantiate_node(SyntaxNode,input, index...index)
        end
        s0 << r3
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(CArchetypeSlotHead0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:c_archetype_slot_head][start_index] = r0

    r0
  end

  module CArchetypeSlotId0
    def SYM_ALLOW_ARCHETYPE
      elements[0]
    end

    def type_identifier
      elements[1]
    end

  end

  def _nt_c_archetype_slot_id
    start_index = index
    if node_cache[:c_archetype_slot_id].has_key?(index)
      cached = node_cache[:c_archetype_slot_id][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    r1 = _nt_SYM_ALLOW_ARCHETYPE
    s0 << r1
    if r1
      r2 = _nt_type_identifier
      s0 << r2
      if r2
        r4 = _nt_V_LOCAL_TERM_CODE_REF
        if r4
          r3 = r4
        else
          r3 = instantiate_node(SyntaxNode,input, index...index)
        end
        s0 << r3
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(CArchetypeSlotId0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:c_archetype_slot_id][start_index] = r0

    r0
  end

  def _nt_c_primitive_object
    start_index = index
    if node_cache[:c_primitive_object].has_key?(index)
      cached = node_cache[:c_primitive_object][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    r0 = _nt_c_primitive

    node_cache[:c_primitive_object][start_index] = r0

    r0
  end

  def _nt_c_primitive
    start_index = index
    if node_cache[:c_primitive].has_key?(index)
      cached = node_cache[:c_primitive][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    r1 = _nt_c_integer
    if r1
      r0 = r1
    else
      r2 = _nt_c_real
      if r2
        r0 = r2
      else
        r3 = _nt_c_date
        if r3
          r0 = r3
        else
          r4 = _nt_c_time
          if r4
            r0 = r4
          else
            r5 = _nt_c_date_time
            if r5
              r0 = r5
            else
              r6 = _nt_c_duration
              if r6
                r0 = r6
              else
                r7 = _nt_c_string
                if r7
                  r0 = r7
                else
                  r8 = _nt_c_boolean
                  if r8
                    r0 = r8
                  else
                    @index = i0
                    r0 = nil
                  end
                end
              end
            end
          end
        end
      end
    end

    node_cache[:c_primitive][start_index] = r0

    r0
  end

  module CAny0
    def space
      elements[1]
    end
  end

  def _nt_c_any
    start_index = index
    if node_cache[:c_any].has_key?(index)
      cached = node_cache[:c_any][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if has_terminal?('*', false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 1))
      @index += 1
    else
      terminal_parse_failure('*')
      r1 = nil
    end
    s0 << r1
    if r1
      r2 = _nt_space
      s0 << r2
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(CAny0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:c_any][start_index] = r0

    r0
  end

  def _nt_c_attributes
    start_index = index
    if node_cache[:c_attributes].has_key?(index)
      cached = node_cache[:c_attributes][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    s0, i0 = [], index
    loop do
      r1 = _nt_c_attribute
      if r1
        s0 << r1
      else
        break
      end
    end
    if s0.empty?
      @index = i0
      r0 = nil
    else
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
    end

    node_cache[:c_attributes][start_index] = r0

    r0
  end

  module CAttribute0
    def c_attr_head
      elements[0]
    end

    def c_attr_body
      elements[1]
    end
  end

  def _nt_c_attribute
    start_index = index
    if node_cache[:c_attribute].has_key?(index)
      cached = node_cache[:c_attribute][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    r1 = _nt_c_attr_head
    s0 << r1
    if r1
      r2 = _nt_c_attr_body
      s0 << r2
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(CAttribute0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:c_attribute][start_index] = r0

    r0
  end

  module CAttrHead0
    def V_ATTRIBUTE_IDENTIFIER
      elements[0]
    end

    def white_space
      elements[1]
    end

  end

  def _nt_c_attr_head
    start_index = index
    if node_cache[:c_attr_head].has_key?(index)
      cached = node_cache[:c_attr_head][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    r1 = _nt_V_ATTRIBUTE_IDENTIFIER
    s0 << r1
    if r1
      r2 = _nt_white_space
      s0 << r2
      if r2
        r4 = _nt_c_existence
        if r4
          r3 = r4
        else
          r3 = instantiate_node(SyntaxNode,input, index...index)
        end
        s0 << r3
        if r3
          r6 = _nt_c_cardinality
          if r6
            r5 = r6
          else
            r5 = instantiate_node(SyntaxNode,input, index...index)
          end
          s0 << r5
        end
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(CAttrHead0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:c_attr_head][start_index] = r0

    r0
  end

  module CAttrBody0
    def SYM_MATCHES
      elements[0]
    end

    def SYM_START_CBLOCK
      elements[1]
    end

    def c_attr_values
      elements[2]
    end

    def SYM_END_CBLOCK
      elements[3]
    end
  end

  def _nt_c_attr_body
    start_index = index
    if node_cache[:c_attr_body].has_key?(index)
      cached = node_cache[:c_attr_body][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    r1 = _nt_SYM_MATCHES
    s0 << r1
    if r1
      r2 = _nt_SYM_START_CBLOCK
      s0 << r2
      if r2
        r3 = _nt_c_attr_values
        s0 << r3
        if r3
          r4 = _nt_SYM_END_CBLOCK
          s0 << r4
        end
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(CAttrBody0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:c_attr_body][start_index] = r0

    r0
  end

  def _nt_c_attr_values
    start_index = index
    if node_cache[:c_attr_values].has_key?(index)
      cached = node_cache[:c_attr_values][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    r1 = _nt_c_any
    if r1
      r0 = r1
    else
      s2, i2 = [], index
      loop do
        r3 = _nt_c_object
        if r3
          s2 << r3
        else
          break
        end
      end
      if s2.empty?
        @index = i2
        r2 = nil
      else
        r2 = instantiate_node(SyntaxNode,input, i2...index, s2)
      end
      if r2
        r0 = r2
      else
        @index = i0
        r0 = nil
      end
    end

    node_cache[:c_attr_values][start_index] = r0

    r0
  end

  module CIncludes0
    def SYM_INCLUDE
      elements[0]
    end

    def assertions
      elements[1]
    end
  end

  def _nt_c_includes
    start_index = index
    if node_cache[:c_includes].has_key?(index)
      cached = node_cache[:c_includes][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    r1 = _nt_SYM_INCLUDE
    s0 << r1
    if r1
      r2 = _nt_assertions
      s0 << r2
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(CIncludes0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:c_includes][start_index] = r0

    r0
  end

  module CExcludes0
    def SYM_EXCLUDE
      elements[0]
    end

    def assertions
      elements[1]
    end
  end

  def _nt_c_excludes
    start_index = index
    if node_cache[:c_excludes].has_key?(index)
      cached = node_cache[:c_excludes][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    r1 = _nt_SYM_EXCLUDE
    s0 << r1
    if r1
      r2 = _nt_assertions
      s0 << r2
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(CExcludes0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:c_excludes][start_index] = r0

    r0
  end

  module CExistence0
    def SYM_EXISTENCE
      elements[0]
    end

    def SYM_MATCHES
      elements[1]
    end

    def SYM_START_CBLOCK
      elements[2]
    end

    def existence_spec
      elements[3]
    end

    def SYM_END_CBLOCK
      elements[4]
    end
  end

  def _nt_c_existence
    start_index = index
    if node_cache[:c_existence].has_key?(index)
      cached = node_cache[:c_existence][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    r1 = _nt_SYM_EXISTENCE
    s0 << r1
    if r1
      r2 = _nt_SYM_MATCHES
      s0 << r2
      if r2
        r3 = _nt_SYM_START_CBLOCK
        s0 << r3
        if r3
          r4 = _nt_existence_spec
          s0 << r4
          if r4
            r5 = _nt_SYM_END_CBLOCK
            s0 << r5
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(CExistence0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:c_existence][start_index] = r0

    r0
  end

  module ExistenceSpec0
    def SYM_ELLIPSIS
      elements[0]
    end

    def V_INTEGER
      elements[1]
    end
  end

  module ExistenceSpec1
    def V_INTEGER
      elements[0]
    end

  end

  def _nt_existence_spec
    start_index = index
    if node_cache[:existence_spec].has_key?(index)
      cached = node_cache[:existence_spec][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    r1 = _nt_V_INTEGER
    s0 << r1
    if r1
      i3, s3 = index, []
      r4 = _nt_SYM_ELLIPSIS
      s3 << r4
      if r4
        r5 = _nt_V_INTEGER
        s3 << r5
      end
      if s3.last
        r3 = instantiate_node(SyntaxNode,input, i3...index, s3)
        r3.extend(ExistenceSpec0)
      else
        @index = i3
        r3 = nil
      end
      if r3
        r2 = r3
      else
        r2 = instantiate_node(SyntaxNode,input, index...index)
      end
      s0 << r2
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(ExistenceSpec1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:existence_spec][start_index] = r0

    r0
  end

  module CCardinality0
    def SYM_CARDINALITY
      elements[0]
    end

    def SYM_MATCHES
      elements[1]
    end

    def SYM_START_CBLOCK
      elements[2]
    end

    def cardinality_spec
      elements[3]
    end

    def SYM_END_CBLOCK
      elements[4]
    end
  end

  def _nt_c_cardinality
    start_index = index
    if node_cache[:c_cardinality].has_key?(index)
      cached = node_cache[:c_cardinality][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    r1 = _nt_SYM_CARDINALITY
    s0 << r1
    if r1
      r2 = _nt_SYM_MATCHES
      s0 << r2
      if r2
        r3 = _nt_SYM_START_CBLOCK
        s0 << r3
        if r3
          r4 = _nt_cardinality_spec
          s0 << r4
          if r4
            r5 = _nt_SYM_END_CBLOCK
            s0 << r5
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(CCardinality0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:c_cardinality][start_index] = r0

    r0
  end

  module CardinalitySpec0
    def white_space
      elements[1]
    end

    def SYM_UNIQUE
      elements[2]
    end
  end

  module CardinalitySpec1
    def white_space
      elements[1]
    end

  end

  module CardinalitySpec2
    def occurrence_spec
      elements[0]
    end

  end

  module CardinalitySpec3
    def white_space
      elements[1]
    end

  end

  module CardinalitySpec4
    def occurrence_spec
      elements[0]
    end

    def SYM_UNIQUE
      elements[1]
    end

  end

  def _nt_cardinality_spec
    start_index = index
    if node_cache[:cardinality_spec].has_key?(index)
      cached = node_cache[:cardinality_spec][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    i1, s1 = index, []
    r2 = _nt_occurrence_spec
    s1 << r2
    if r2
      i4, s4 = index, []
      if has_terminal?(';', false, index)
        r5 = instantiate_node(SyntaxNode,input, index...(index + 1))
        @index += 1
      else
        terminal_parse_failure(';')
        r5 = nil
      end
      s4 << r5
      if r5
        r6 = _nt_white_space
        s4 << r6
        if r6
          i7 = index
          r8 = _nt_SYM_UNORDERD
          if r8
            r7 = r8
          else
            r9 = _nt_SYM_ORDERED
            if r9
              r7 = r9
            else
              @index = i7
              r7 = nil
            end
          end
          s4 << r7
          if r7
            i11, s11 = index, []
            if has_terminal?(';', false, index)
              r12 = instantiate_node(SyntaxNode,input, index...(index + 1))
              @index += 1
            else
              terminal_parse_failure(';')
              r12 = nil
            end
            s11 << r12
            if r12
              r13 = _nt_white_space
              s11 << r13
              if r13
                r14 = _nt_SYM_UNIQUE
                s11 << r14
              end
            end
            if s11.last
              r11 = instantiate_node(SyntaxNode,input, i11...index, s11)
              r11.extend(CardinalitySpec0)
            else
              @index = i11
              r11 = nil
            end
            if r11
              r10 = r11
            else
              r10 = instantiate_node(SyntaxNode,input, index...index)
            end
            s4 << r10
          end
        end
      end
      if s4.last
        r4 = instantiate_node(SyntaxNode,input, i4...index, s4)
        r4.extend(CardinalitySpec1)
      else
        @index = i4
        r4 = nil
      end
      if r4
        r3 = r4
      else
        r3 = instantiate_node(SyntaxNode,input, index...index)
      end
      s1 << r3
    end
    if s1.last
      r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
      r1.extend(CardinalitySpec2)
    else
      @index = i1
      r1 = nil
    end
    if r1
      r0 = r1
    else
      i15, s15 = index, []
      r16 = _nt_occurrence_spec
      s15 << r16
      if r16
        r17 = _nt_SYM_UNIQUE
        s15 << r17
        if r17
          i19, s19 = index, []
          if has_terminal?(';', false, index)
            r20 = instantiate_node(SyntaxNode,input, index...(index + 1))
            @index += 1
          else
            terminal_parse_failure(';')
            r20 = nil
          end
          s19 << r20
          if r20
            r21 = _nt_white_space
            s19 << r21
            if r21
              i22 = index
              r23 = _nt_SYM_ORDERED
              if r23
                r22 = r23
              else
                r24 = _nt_SYM_UNORDERD
                if r24
                  r22 = r24
                else
                  @index = i22
                  r22 = nil
                end
              end
              s19 << r22
            end
          end
          if s19.last
            r19 = instantiate_node(SyntaxNode,input, i19...index, s19)
            r19.extend(CardinalitySpec3)
          else
            @index = i19
            r19 = nil
          end
          if r19
            r18 = r19
          else
            r18 = instantiate_node(SyntaxNode,input, index...index)
          end
          s15 << r18
        end
      end
      if s15.last
        r15 = instantiate_node(SyntaxNode,input, i15...index, s15)
        r15.extend(CardinalitySpec4)
      else
        @index = i15
        r15 = nil
      end
      if r15
        r0 = r15
      else
        @index = i0
        r0 = nil
      end
    end

    node_cache[:cardinality_spec][start_index] = r0

    r0
  end

  module COccurrences0
    def SYM_OCCURRENCES
      elements[0]
    end

    def SYM_MATCHES
      elements[1]
    end

    def SYM_START_CBLOCK
      elements[2]
    end

    def occurrence_spec
      elements[3]
    end

    def SYM_END_CBLOCK
      elements[4]
    end
  end

  def _nt_c_occurrences
    start_index = index
    if node_cache[:c_occurrences].has_key?(index)
      cached = node_cache[:c_occurrences][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end
